--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,9 @@
 html {
     font-family: 'Source Sans Pro', sans-serif;
 }
+
+body {
+    min-height: 100vh;
+    background-image: url(../src/images/wavesvg.png);
+    background-size: cover;
+}
